--- a/client/src/index.html
+++ b/client/src/index.html
@@ -1,16 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="eng">
   <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, maximum-scale=1"
-    />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-
-    <title>React Boilerplate</title>
+    <meta charset="utf-8" />
+    <title>Redux React</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="app"></div>
   </body>
 </html>
