--- a/client/src/index.html
+++ b/client/src/index.html
@@ -2,7 +2,7 @@
 <html lang="eng">
   <head>
     <meta charset="utf-8" />
-    <title>Redux React</title>
+    <title>Educational Courses</title>
   </head>
   <body>
     <div id="app"></div>
